# mallorca.pizza

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: verify.yml
docs/: architecture.md  configuration-model.md  deployment.md  implementation-plan.md  project-brief.md  security.md  testing-strategy.md
restaurants/shine/: menu.yaml  restaurant.yaml  seo.yaml  theme.yaml
src/mallorca_pizza/: __init__.py  main.py  seo.py  server.py  settings.py  validate_config.py
src/mallorca_pizza/config/: __init__.py  assets.py  catalog.py  errors.py  limits.py  models.py  types.py  yaml_loader.py
src/mallorca_pizza/http/: __init__.py  host_resolution.py  runtime.py  security.py
src/mallorca_pizza/rendering/: __init__.py  renderer.py
src/mallorca_pizza/rendering/templates/: restaurant.html
src/mallorca_pizza/rendering/templates/blocks/: contact.html  gallery.html  hero.html  hours.html  menu.html
static/css/: site.css
tests/: test_app.py  test_config_catalog.py  test_http_phase4.py  test_settings.py
